# hypernoa-astrum

./: .dockerignore  .gitignore  Dockerfile  README.md  Understanding doc  UnderstandingDoc.MD  entrypoint.sh  northflank.json  pyproject.toml  requirements.txt  run_astrum_local.py  train.py  train_grpo.py  visualize.py
colab/: astrum_grpo_training.ipynb
docs/: compliance_check.md  demo_script.md  overview.md  project_walkthrough.md
hf_space/: Dockerfile  README.md  __init__.py  app.py  client.py  config.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
hf_space/server/: app.py  astrum_environment.py
hypernoa/: __init__.py
hypernoa/astrum_env/: __init__.py  config.py  env.py  models.py  openenv.yaml  policies.py  server.py
tests/: test_env.py  test_policies.py  test_server.py
