[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "hypernoa-astrum"
version = "0.1.0"
description = "Adaptive environments for training aligned, multi-objective intelligence"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "naidu1212"},
]
keywords = [
    "reinforcement-learning",
    "alignment",
    "multi-objective",
    "adaptive-environments",
    "ai-safety",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "uvicorn>=0.24",
    "fastapi>=0.104",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
demo = ["gradio>=4.0"]
openenv = ["openenv-core>=0.2.1"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]
all = ["hypernoa-astrum[demo,openenv,dev]"]

[project.urls]
Homepage = "https://github.com/naidu1212/hypernoa-astrum"
Repository = "https://github.com/naidu1212/hypernoa-astrum"
Issues = "https://github.com/naidu1212/hypernoa-astrum/issues"

[project.scripts]
astrum-local = "run_astrum_local:main"
astrum-server = "hypernoa.astrum_env.server:run"

[tool.setuptools.packages.find]
include = ["hypernoa*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
